Fix formatting issues

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
     <hr />
 
-    <h1><span class="orange">Problem 9: On The Grid (What the Funge?)</span> (20 points)</h1>
+    <h1><span class="orange">Problem 9</span>: On The Grid (What the Funge?) (20 points)</h1>
     <div class="well">
       <a href="https://esolangs.org/wiki/Befunge">Befunge</a> is an esoteric programming language that
       uses a grid system. It was designed specifically to be the hardest programming language to write
