More formatting issues

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
     <hr />
 
-    <h1><span class="orange">Problem 9</span>: The Vain Centipede</h1>
+    <h1><span class="orange">Problem 9:</span> The Vain Centipede</h1>
     <div class="well">
       Cedric the centipede likes to wear boots. Of course, like many
       centipedes, Cedric does not actually have exactly 100 feet, but he has
@@ -565,7 +565,7 @@
       </div>
     </div>
 
-    <h1><span class="orange">Problem 10</span>: On The Grid (What the Funge?) (20 points)</h1>
+    <h1><span class="orange">Problem 10:</span> On The Grid (What the Funge?) (20 points)</h1>
     <div class="well">
       <a href="https://esolangs.org/wiki/Befunge">Befunge</a> is an esoteric programming language that
       uses a grid system. It was designed specifically to be the hardest programming language to write
