Added reference to remote submission

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       </div>
       <div class="panel-body">
         Use <strong>Java, C, C++, or Python (2 or 3)</strong> to implement a solution to the problems listed below.
-        When you are done, raise your hand to pass it off to one of the judges.
-        You have from now until 8:30 P.M. Most points win. Good luck.
+        When you are done, raise your hand to pass it off to one of the judges or email your solution to <a href="mailto:okstateacm@gmail.com">okstateacm@gmail.com</a>.
+        You have from 5:30pm to 8:30pm. The most points win. Good luck.
       </div>
     </div>
 
@@ -261,7 +261,7 @@
         <ol>
           <li>
             a list of (foot size, boot size) pairs such that the <strong>sum
-            of the shoe sizes is maximized.</strong> The output should be sorted 
+            of the shoe sizes is maximized.</strong> The output should be sorted
             by foot size
           </li>
           <li>
@@ -291,7 +291,7 @@
       </div>
 
       <hr>
-      
+
       Input:
       <div class="well">
         6 9
