Clarification of rules

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       </div>
       <div class="panel-body">
         Use <strong>Java, C, C++, or Python (2 or 3)</strong> to implement a solution to the problems listed below.
-        When you are done, raise your hand to pass it off to one of the judges or email your solution to <a href="mailto:okstateacm@gmail.com">okstateacm@gmail.com</a>.
+        When you are done, email your solution to <a href="mailto:okstateacm@gmail.com">okstateacm@gmail.com</a>.
         You have from 5:30pm to 8:30pm. The most points win. Good luck.
       </div>
     </div>
@@ -51,7 +51,7 @@
         <ul>
           <li>All of OSU's academic integrity rules apply. You are free to use Google/your friends so long as your code is your own.</li>
           <li>Unless the problem specifies otherwise, all input will be read from stdin (so, for Java this means a Scanner reading System.in)</li>
-          <li>You must pass your code off (or at least have had your hand up) before 8:31 P.M. in order to get credit for the problem.</li>
+          <li>You must have submitted your code before 8:31 P.M. in order to get credit for the problem.</li>
           <li>If you come to one of the judges to pass off a program and it doesn't work, you may fix it and come back as many times as necessary, given it is still before 8:31 P.M.</li>
           <li>If any problem seems too ambigous, ask a judge to clarify.</li>
         </ul>
