More clarifiying of rule

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <li>All of OSU's academic integrity rules apply. You are free to use Google/your friends so long as your code is your own.</li>
           <li>Unless the problem specifies otherwise, all input will be read from stdin (so, for Java this means a Scanner reading System.in)</li>
           <li>You must have submitted your code before 8:31 P.M. in order to get credit for the problem.</li>
-          <li>If you come to one of the judges to pass off a program and it doesn't work, you may fix it and come back as many times as necessary, given it is still before 8:31 P.M.</li>
+          <li>If you submit your program and it doesn't work, you may fix it and resubmit as many times as necessary, given it is still before 8:31 P.M.</li>
           <li>If any problem seems too ambigous, ask a judge to clarify.</li>
         </ul>
       </div>
